--- a/src/index.scss
+++ b/src/index.scss
@@ -13,8 +13,9 @@
     --darkorange: #e65100;
     --indigo: #01579b;
     --darkred: #c62828;
-    --scrollColor: var(--scrollColorWhite);
-    --background: #F5F6FA;
+    --scrollColor: var(--scrollColorBlack);
+    --semipink: #F5F6FA;
+    --background: var(--white);
     --foreground: var(--black);
     --highlight: (--mint);
     --transition: 0s ease;
@@ -28,10 +29,50 @@ html {
     overflow: auto;
     background: var(--background);
     color: var(--foreground);
-    transition: var(--transition);
-    transition-property: color, background;
+    font-family: "GmarketSansMedium";
+    transition: 1s;
 }
-div {
-    font-family: "Pretendard";
-    margin: 0;
+@font-face {
+    font-family: "GmarketSansMedium";
+    src: url("./fonts/GmarketSansMedium.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "SDSamliphopangche_Outline";
+    src: url("./fonts/SDSamliphopangche_Outline.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "LAB디지털";
+    src: url("./fonts/LAB디지털.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Nanum Gothic Coding";
+    src: url("./fonts/나눔고딕코딩.woff2") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+    width: 0.7rem !important;
+    border-radius: 1rem !important;
+    margin: 0 !important;
+}
+body::-webkit-scrollbar-thumb {
+    color: var(--scrollColor) !important;
+}
+*::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 0 10px !important;
+}
+*::-webkit-scrollbar-corner {
+    background-color: transparent !important;
+    color: transparent !important;
 }
