main page update

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@
     --semipink: #F5F6FA;
     --background: var(--white);
     --foreground: var(--black);
-    --highlight: (--mint);
+    --highlight: var(--pink);
     --transition: 0s ease;
 }
 
