--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,9 @@ div {
   font-family: "GmarketSansMedium";
   transition: background-color 1s;
 }
+svg {
+  fill: var(--foreground);
+}
 input {
   background: var(--background);
   color: var(--foreground);
