--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,6 +1,7 @@
 :root {
-  --black: #1e2430;
-  --white: #ffffff;
+  --black: #212121;
+  --white: #EEEEEE;
+  --semiwhite: #DEDEDE;
   --scrollColorBlack: rgba(0, 0, 0, 0.7);
   --scrollColorWhite: rgba(255, 255, 255, 0.3);
   --mint: #94d6c5;
