--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,9 @@ svg {
   fill: var(--foreground);
   background-color: transparent;
 }
+path {
+  stroke: var(--foreground);
+}
 input {
   background: var(--background);
   color: var(--foreground);
